Fix: card day overflow auto

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -4,3 +4,11 @@
 .resumen{
   background-color: #252230;
 }
+
+.content-card {
+  overflow-x:auto;
+}
+
+.card-day{
+  flex-basis: fit-content ;
+}
